# go2-quadruped-sim

./: .gitignore  CREDITS.md  LICENSE  README.md
src/unitree_go2_controller/: CMakeLists.txt  README.md  package.xml
src/unitree_go2_controller/config/: kinematics_config.yaml
src/unitree_go2_controller/include/: go2_quadruped_description.h  quadruped_controller.h
src/unitree_go2_controller/include/champ/body_controller/: body_controller.h
src/unitree_go2_controller/include/champ/geometry/: geometry.h
src/unitree_go2_controller/include/champ/kinematics/: kinematics.h
src/unitree_go2_controller/include/champ/leg_controller/: leg_controller.h  phase_generator.h  trajectory_planner.h
src/unitree_go2_controller/include/champ/macros/: macros.h
src/unitree_go2_controller/include/champ/odometry/: odometry.h
src/unitree_go2_controller/include/champ/quadruped_base/: quadruped_base.h  quadruped_joint.h  quadruped_leg.h
src/unitree_go2_controller/include/champ/utils/: urdf_loader.h
src/unitree_go2_controller/launch/: __init__.py  controller.launch.py
src/unitree_go2_controller/src/: quadruped_controller.cpp  quadruped_controller_node.cpp
src/unitree_go2_description/: CMakeLists.txt  README.md  package.xml
src/unitree_go2_description/config/: ros_control.yaml
src/unitree_go2_description/launch/: __init__.py  display.launch.py
src/unitree_go2_description/rviz/: unitree_go2.rviz
src/unitree_go2_description/xacro/: constants.xacro  gazebo.xacro  leg.xacro  lidar.xacro  unitree_go2.xacro
src/unitree_go2_msgs/: CMakeLists.txt  README.md  package.xml
src/unitree_go2_nav2/: README.md  package.xml  setup.cfg  setup.py
src/unitree_go2_nav2/config/: go2_nav2_sim.rviz  gz_bridge.yaml  kinematics_config.yaml  nav2_sim_params_minimal.yaml
src/unitree_go2_nav2/launch/: __init__.py  simulation.launch.py
src/unitree_go2_nav2/unitree_go2_nav2/: __init__.py  body_pose_demo.py
src/unitree_go2_nav2/worlds/: test_arena.world
