<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_go2_description</name>
  <version>2.0.0</version>
  <description>URDF Description package for Unitree Go2 robot (ROS 2 Jazzy)</description>
  
  <maintainer email="andrewoshei@gmail.com">Andrew O'Shei</maintainer>
  <license>BSD-3 Clause License</license>
  
  <author>Unitree Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
