<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- src/unitree_go2_nav2/package.xml -->
<package format="3">
  <name>unitree_go2_nav2</name>
  <version>1.0.0</version>
  <description>Navigation package for Unitree Go2 simulation with Gazebo Harmonic simulation</description>
  
  <maintainer email="andrewoshei@gmail.com">Andrew O'Shei</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Python ROS 2 Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>

  <!-- Nav2 Dependencies -->
  <depend>nav2_msgs</depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  
  <!-- SLAM -->
  <exec_depend>slam_toolbox</exec_depend>
  
  <!-- Robot State Publishing -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  
  <!-- Gazebo Harmonic (gz-sim) Dependencies -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  
  <!-- RViz -->
  <exec_depend>rviz2</exec_depend>
  
  <!-- Xacro for URDF processing -->
  <exec_depend>xacro</exec_depend>
  
  <!-- Optional: Robot Localization for sensor fusion -->
  <exec_depend>robot_localization</exec_depend>
  
  <!-- Web interface (optional) -->
  <exec_depend>rosbridge_suite</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
